--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -84,7 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ثبت تراکنش"
-            android:backgroundTint="@color/teal_700"
+            android:backgroundTint="#018786"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
