--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
+    <!-- لیست تراکنش‌ها -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"/>
+        android:layout_above="@+id/tvBalance"
+        android:paddingBottom="24dp"
+        android:clipToPadding="false" />
 
+    <!-- نوشته مانده در پایین صفحه -->
+    <TextView
+        android:id="@+id/tvBalance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="مانده"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:padding="12dp"
+        android:background="#f5f5f5"
+        android:textColor="#000000"
+        android:layout_alignParentBottom="true" />
+
+    <!-- دکمه شناور بالای صفحه -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
+        android:layout_alignParentTop="true"
         android:src="@android:drawable/ic_input_add"
-        android:contentDescription="افزودن تراکنش"/>
+        android:contentDescription="افزودن تراکنش"
+        android:tint="#FFFFFF"
+        android:backgroundTint="#009688" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
