--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -4,50 +4,47 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:background="@android:color/white"
-    android:layout_marginBottom="2dp"
-    android:weightSum="4"
-    android:elevation="1dp">
+    android:background="#BBDEFB"  <!-- آبی ملایم‌تر از پس‌زمینه کلی -->
+    android:layout_marginVertical="4dp">
 
     <TextView
         android:id="@+id/txtDate"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="1403/08/10"
+        android:text="1404/07/29"
         android:textSize="14sp"
-        android:textColor="@android:color/black" />
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/txtAmount"
         android:layout_width="0dp"
+        android:layout_weight="1.2"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
-        android:text="120,000"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
+        android:text="3,000,000"
+        android:textStyle="bold"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/txtCategory"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="خوراک"
+        android:text="حقوق"
         android:textSize="14sp"
-        android:textColor="@android:color/black" />
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/txtDescription"
         android:layout_width="0dp"
+        android:layout_weight="1.3"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
-        android:text="ناهار"
-        android:textSize="14sp"
-        android:textColor="@android:color/black" />
+        android:text="توضیحات"
+        android:textSize="13sp"
+        android:textColor="#444444" />
 
 </LinearLayout>
